crates/codegen/language/tests/src/fail/definitions/duplicate_expression_name/test.stderr
error: An expression with the name 'Expression1' already exists.
  --> src/fail/definitions/duplicate_expression_name/test.rs:20:53
   |
20 |                         PrecedenceExpression(name = Expression1, operators = [])
   |                                                     ^^^^^^^^^^^
